调整脚本位置以及修改脚本

--- a/Cluster/pom.xml
+++ b/Cluster/pom.xml
@@ -22,7 +22,7 @@
         <module>Hadoop</module>
         <module>HAProxy</module>
         <module>Zookeeper</module>
-        <module>Library</module>
+        <module>Environment</module>
         <module>RocketMQ</module>
     </modules>
 
