--- a/Cluster/Environment/pom.xml
+++ b/Cluster/Environment/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hzgc.cluster</groupId>
-    <artifactId>library</artifactId>
+    <artifactId>Environment</artifactId>
 
 
 </project>
