--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -19,6 +19,7 @@
         <module>StaRepo</module>
         <module>BigDataApi</module>
         <module>Util</module>
+        <module>Collect</module>
     </modules>
 
     <dependencies>
