--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -29,10 +29,19 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>com.hzgc.cluster</groupId>
-            <artifactId>hbase</artifactId>
-            <version>${project.parent.version}</version>
-            <scope>provided</scope>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${hbase.version}</version>
         </dependency>
     </dependencies>
 
