--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>service</artifactId>
+        <artifactId>hzgc</artifactId>
         <groupId>com.hzgc</groupId>
         <version>2.3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.hzgc.service</groupId>
     <artifactId>util</artifactId>
+
 
 </project>
