--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Cluster</module>
         <module>Service</module>
         <module>Collect</module>
+        <module>Util</module>
     </modules>
 
     <properties>
