项目打包配置

--- a/Cluster/Phoenix/pom.xml
+++ b/Cluster/Phoenix/pom.xml
@@ -10,7 +10,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hzgc.cluster</groupId>
-    <artifactId>Phoenix</artifactId>
+    <artifactId>phoenix</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>Phoenix</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/assembly/assembly.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>false</appendAssemblyId>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
