--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>Common</module>
         <module>JNI</module>
         <module>BigDataApi</module>
+        <module>Distribution</module>
     </modules>
 
     <properties>
