--- a/Service/StaRepo/pom.xml
+++ b/Service/StaRepo/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hzgc.service</groupId>
-    <artifactId>StaRepo</artifactId>
+    <artifactId>starepo</artifactId>
 
     <dependencies>
         <dependency>
