--- a/Cluster/pom.xml
+++ b/Cluster/pom.xml
@@ -25,6 +25,6 @@
         <module>Environment</module>
         <module>RocketMQ</module>
     </modules>
-
-
+    <dependencies>
+    </dependencies>
 </project>
