--- a/Service/Face/pom.xml
+++ b/Service/Face/pom.xml
@@ -12,6 +12,10 @@
     <groupId>com.hzgc.service</groupId>
     <artifactId>face</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
     </dependencies>
 
 
