--- a/Distribution/pom.xml
+++ b/Distribution/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>distribution</artifactId>
-
+    <packaging>pom</packaging>
 
     <build>
         <plugins>
