--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -17,5 +17,23 @@
         <module>Common-service</module>
         <module>Common-util</module>
     </modules>
+    <properties>
+        <!--接管平台后添加-->
+        <tomcat.version>8.0.11</tomcat.version>
+        <jackson.version>2.8.6</jackson.version>
+        <shiro.version>1.4.0</shiro.version>
+        <druid.version>1.1.1</druid.version>
+        <commons-net.version>3.6</commons-net.version>
+        <commons-lang.version>3.3.2</commons-lang.version>
+        <resteasy.version>3.1.2.Final</resteasy.version>
+        <resteasy.version>3.1.2.Final</resteasy.version>
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
+        <mybatis.version>3.4.4</mybatis.version>
+        <mysql.connector.version>5.1.20</mysql.connector.version>
+        <el-api.version>3.0.0</el-api.version>
+        <hibernate.validator.version>5.4.0.Final</hibernate.validator.version>
+        <jax.validation.version>1.1.0.Final</jax.validation.version>
+        <glassfish-el.version>2.2.6</glassfish-el.version>
+    </properties>
 
 </project>
