--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -60,6 +60,10 @@
             <version>${project.parent.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
