--- a/Service/Device/src/main/resources/device.yml
+++ b/Service/Device/src/main/resources/device.yml
@@ -5,7 +5,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 server:
-  port: 8764
+  port: 8765
 spring:
   application:
-    name: face
+    name: device
