修改service模块pom文件

--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -54,6 +54,12 @@
             <version>${project.parent.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-service</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!--spring cloud-->
         <dependency>
