--- a/Service/Device/pom.xml
+++ b/Service/Device/pom.xml
@@ -12,6 +12,14 @@
     <groupId>com.hzgc.service</groupId>
     <artifactId>device</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-service</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
