--- a/Service/StaRepo/pom.xml
+++ b/Service/StaRepo/pom.xml
@@ -12,6 +12,20 @@
     <groupId>com.hzgc.service</groupId>
     <artifactId>starepo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-service</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <!--Phoenix JDBC -->
+        <dependency>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-core</artifactId>
+            <version>4.13.1-HBase-1.2</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -36,14 +50,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <!--Phoenix JDBC -->
-        <dependency>
-            <groupId>org.apache.phoenix</groupId>
-            <artifactId>phoenix-core</artifactId>
-            <version>4.13.1-HBase-1.2</version>
-        </dependency>
-    </dependencies>
 
 </project>
