--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -22,11 +22,6 @@
     </modules>
 
     <dependencies>
-        <!--<dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>1.0</version>
-        </dependency>-->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
@@ -41,16 +36,6 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>${hbase.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>jni</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.hzgc.common</groupId>
-            <artifactId>common-util</artifactId>
-            <version>${project.parent.version}</version>
         </dependency>
 
         <!--spring cloud-->
@@ -76,6 +61,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -84,6 +70,21 @@
                 <version>Edgware.SR3</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.hzgc</groupId>
+                <artifactId>jni</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.hzgc.common</groupId>
+                <artifactId>common-ftp</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.hzgc.common</groupId>
+                <artifactId>common-service</artifactId>
+                <version>${project.parent.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
