--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -20,7 +20,7 @@
     <properties>
         <!--接管平台后添加-->
         <tomcat.version>8.0.11</tomcat.version>
-        <jackson.version>2.8.6</jackson.version>
+        <!--<jackson.version>2.8.6</jackson.version>
         <shiro.version>1.4.0</shiro.version>
         <druid.version>1.1.1</druid.version>
         <commons-net.version>3.6</commons-net.version>
@@ -33,7 +33,7 @@
         <el-api.version>3.0.0</el-api.version>
         <hibernate.validator.version>5.4.0.Final</hibernate.validator.version>
         <jax.validation.version>1.1.0.Final</jax.validation.version>
-        <glassfish-el.version>2.2.6</glassfish-el.version>
+        <glassfish-el.version>2.2.6</glassfish-el.version>-->
     </properties>
 
 </project>
