--- a/Service/StaRepo/src/main/resources/starepoApplication.properties
+++ b/Service/StaRepo/src/main/resources/starepoApplication.properties
@@ -1,5 +1,17 @@
+##### Spring Cloud相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8075
 spring.application.name=starepo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+##### 连接池相关配置 #####
+phoenix.enable=true
+phoenix.url=jdbc:phoenix:172.16.0.20
+phoenix.type=com.alibaba.druid.pool.DruidDataSource
+phoenix.driver-class-name=org.apache.phoenix.jdbc.PhoenixDriver
+##phoenix的用户名默认为空
+phoenix.username=
+##phoenix的密码默认为空
+phoenix.password=
+phoenix.default-auto-commit:true
