--- a/Service/DynRepo/src/main/resources/dynrepoApplication.properties
+++ b/Service/DynRepo/src/main/resources/dynrepoApplication.properties
@@ -1,5 +1,16 @@
+##### Spring Cloud相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8073
 spring.application.name=dynrepo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+##### ES集群相关配置 #####
+es.cluster.name=hbase2es-cluster
+#only need one of the es nodes of es cluster
+es.hosts=172.18.18.103
+es.cluster.port=9300
+
+##### Spark JDBC相关配置 #####
+hive.jdbc.driver
+hive.jdbc.url
