静态库表Objectinfo里增加objecttype 数据，以及objecttype的增删改查

--- a/Service/StaRepo/pom.xml
+++ b/Service/StaRepo/pom.xml
@@ -21,6 +21,11 @@
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>16.0</version>
+        </dependency>
         <!--Phoenix JDBC -->
         <dependency>
             <groupId>org.apache.phoenix</groupId>
