--- a/Service/Address/pom.xml
+++ b/Service/Address/pom.xml
@@ -16,8 +16,10 @@
         <dependency>
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-ftp</artifactId>
-            <version>${project.parent.version}</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-service</artifactId>
         </dependency>
     </dependencies>
 
