--- a/Service/DynRepo/src/main/resources/dynrepoApplication.properties
+++ b/Service/DynRepo/src/main/resources/dynrepoApplication.properties
@@ -1,7 +1,7 @@
 ##### Spring Cloud相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8073
-spring.application.name=dynrepo
+spring.application.name=dynRepo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
