--- a/Service/StaRepo/src/main/resources/starepoApplication.properties
+++ b/Service/StaRepo/src/main/resources/starepoApplication.properties
@@ -1,7 +1,7 @@
 ##### Spring Cloud相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8075
-spring.application.name=starepo
+spring.application.name=staRepo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
