--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -16,6 +16,7 @@
         <module>Common-ftp</module>
         <module>Common-service</module>
         <module>Common-util</module>
+        <module>Common-udf</module>
     </modules>
     <properties>
         <!--接管平台后添加-->
