--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -52,6 +52,9 @@ rocketmq_nameserver=
 #DUBBO的服务节点所在IP:e.x:172.18.18.144;172.18.18.143
 dubbo_servicenode=
 
+#spring cloud服务节点所在IP
+spring_cloud_servicenode=
+
 #ES的服务节点所在IP:e.x:172.18.18.144
 #only need one of the es nodes of es cluster
 es_servicenode=
