--- a/Common/Common-ftp/pom.xml
+++ b/Common/Common-ftp/pom.xml
@@ -19,8 +19,8 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>jni</artifactId>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>commom-jni</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
