--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -17,6 +17,7 @@
         <module>Common-service</module>
         <module>Common-util</module>
         <module>Common-udf</module>
+        <module>Commom-jni</module>
     </modules>
     <properties>
         <!--接管平台后添加-->
