--- a/Common/Common-udf/pom.xml
+++ b/Common/Common-udf/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-exec</artifactId>
-            <version>2.3.0</version>
+            <version>${hive.version}</version>
         </dependency>
     </dependencies>
 
