address 配置文件整理

--- a/Common/Common-ftp/src/main/resources/collect.properties
+++ b/Common/Common-ftp/src/main/resources/collect.properties
@@ -44,7 +44,7 @@ sharpness=80:80
 zk.session.timeout=6000
 
 #zookeeper连接地址与端口
-zookeeper.address=172.18.18.163:2181
+zk.address=172.18.18.163:2181
 
 #zk订阅抓拍节点路径
 zk.path.subscribe="/ftp_subscribe"
