--- a/Service/Device/src/main/resources/deviceApplication.properties
+++ b/Service/Device/src/main/resources/deviceApplication.properties
@@ -1,3 +1,4 @@
+##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=7773
 spring.application.name=device
