--- a/Service/StaRepo/src/main/resources/starepoApplication.properties
+++ b/Service/StaRepo/src/main/resources/starepoApplication.properties
@@ -14,4 +14,10 @@ phoenix.driver-class-name=org.apache.phoenix.jdbc.PhoenixDriver
 phoenix.username=
 ##phoenix的密码默认为空
 phoenix.password=
-phoenix.default-auto-commit:true
+phoenix.default-auto-commit=true
+
+
+table.name=objectinfo
+table.colfams=person
+table.maxversion=1
+#table.timetolive=15768000
