--- a/Service/Alarm/src/main/resources/alarmApplication.properties
+++ b/Service/Alarm/src/main/resources/alarmApplication.properties
@@ -1,3 +1,4 @@
+##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=7771
 spring.application.name=ftp
