--- a/Service/Face/src/main/resources/faceApplication.properties
+++ b/Service/Face/src/main/resources/faceApplication.properties
@@ -1,6 +1,6 @@
+##### Spring Cloud相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=7775
-spring.instance.name=face
+spring.application.name=face
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-#eureka.instance.status-page-url=http://localhost:${server.port}/swagger-ui.html
