--- a/Service/StaRepo/pom.xml
+++ b/Service/StaRepo/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>druid</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
