--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -86,6 +86,12 @@
                 <artifactId>common-service</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.18</version>
+            </dependency>
+            
         </dependencies>
     </dependencyManagement>
 </project>
