--- a/Service/Address/src/main/resources/ftpApplication.properties
+++ b/Service/Address/src/main/resources/ftpApplication.properties
@@ -1,11 +1,12 @@
-##### Spring Cloud 相关配置 #####
+##### Spring Cloud 相关配置 #############################
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=7770
 spring.application.name=ftp
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+########################################################
 
-##### ftp 相关配置 #####
+##### ftp 相关配置 ######################################
 ip=172.18.18.163
 hostname=s120
 port=2121
@@ -15,9 +16,11 @@ pathRule=%f/%Y/%m/%d/%H
 s120=172.18.18.163
 s103=172.18.18.103
 s105=172.18.18.105
+########################################################
 
-##### ftp subscription 相关配置 #####
+##### ftp subscription 相关配置 #########################
 zk.session.timeout=6000
 zk.address=172.18.18.163:2181
 zk.path.subscribe="/ftp_subscribe"
 zk.watcher=false
+########################################################
