--- a/Common/Common-attribute/pom.xml
+++ b/Common/Common-attribute/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>common-util</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
