--- a/Service/DynRepo/pom.xml
+++ b/Service/DynRepo/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-attribute</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
