--- a/Service/Visual/pom.xml
+++ b/Service/Visual/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
