service 配置文件整理

--- a/Service/StaRepo/src/main/resources/starepoApplication.properties
+++ b/Service/StaRepo/src/main/resources/starepoApplication.properties
@@ -1,12 +1,11 @@
-##### Spring Cloud 相关配置 #############################
+##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=7776
 spring.application.name=staRepo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-########################################################
 
-##### 连接池相关配置 #####################################
+##### 连接池相关配置 #####
 phoenix.enable=true
 phoenix.url=jdbc:phoenix:172.18.18.100:2181
 phoenix.type=com.alibaba.druid.pool.DruidDataSource
@@ -16,11 +15,9 @@ phoenix.username=
 ##phoenix的密码默认为空
 phoenix.password=
 phoenix.default-auto-commit=true
-########################################################
 
-########################################################
+##### #####
 table.name=objectinfo
 table.colfams=person
 table.maxversion=1
 #table.timetolive=15768000
-########################################################
