--- a/Service/Face/src/main/resources/faceApplication.properties
+++ b/Service/Face/src/main/resources/faceApplication.properties
@@ -1,7 +1,6 @@
-##### Spring Cloud 相关配置 #############################
+##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=7775
 spring.application.name=face
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-########################################################
