--- a/Cluster/Spark/pom.xml
+++ b/Cluster/Spark/pom.xml
@@ -105,7 +105,7 @@
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>commom-jni</artifactId>
+            <artifactId>common-jni</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
