--- a/Common/Common-jni/pom.xml
+++ b/Common/Common-jni/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hzgc.common</groupId>
-    <artifactId>commom-jni</artifactId>
+    <artifactId>common-jni</artifactId>
 
     <dependencies>
         <dependency>
