--- a/Service/DynRepo/pom.xml
+++ b/Service/DynRepo/pom.xml
@@ -25,11 +25,10 @@
         <dependency>
             <groupId>com.hzgc.service</groupId>
             <artifactId>util</artifactId>
-            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>commom-jni</artifactId>
+            <artifactId>common-jni</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
