--- a/Service/Face/pom.xml
+++ b/Service/Face/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>commom-jni</artifactId>
+            <artifactId>common-jni</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -25,7 +25,6 @@
         <dependency>
             <groupId>com.hzgc.service</groupId>
             <artifactId>util</artifactId>
-            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
   
