--- a/Service/StaRepo/pom.xml
+++ b/Service/StaRepo/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>commom-jni</artifactId>
+            <artifactId>common-jni</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -49,7 +49,6 @@
         <dependency>
             <groupId>com.hzgc.service</groupId>
             <artifactId>util</artifactId>
-            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
