--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -59,12 +59,7 @@
             </dependency>
             <dependency>
                 <groupId>com.hzgc.common</groupId>
-                <artifactId>commom-jni</artifactId>
-                <version>${project.parent.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.hzgc.common</groupId>
-                <artifactId>common-ftp</artifactId>
+                <artifactId>common-jni</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
@@ -98,14 +93,9 @@
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>2.2.2</version>
-            </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>2.2.2</version>
+                <groupId>com.hzgc.service</groupId>
+                <artifactId>util</artifactId>
+                <version>${project.parent.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
