--- a/Service/Address/pom.xml
+++ b/Service/Address/pom.xml
@@ -21,6 +21,12 @@
         <dependency>
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-util</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.hzgc.service</groupId>
