--- a/Service/Address/src/main/resources/ftpApplication.properties
+++ b/Service/Address/src/main/resources/ftpApplication.properties
@@ -5,18 +5,16 @@ spring.application.name=ftp
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-##### ftp 相关配置 #####
-ip=172.18.18.163
-hostname=s120
-port=2121
-user=admin
-password=123456
-pathRule=%f/%Y/%m/%d/%H
-s120=172.18.18.163
-s103=172.18.18.103
-s105=172.18.18.105
+##### FTP ip、hostname、port 相关配置 #####
+ftp.proxy.ip=172.18.18.163
+ftp.proxy.hostname=s120
+ftp.proxy.port=2121
+ftp.username=admin
+ftp.password=123456
+ftp.pathRule=%f/%Y/%m/%d/%H
+ftp.hostname.mapping=s120:172.18.18.163;s103:172.18.18.103;s105:172.18.18.105
 
-##### ftp subscription 相关配置 #####
+##### Ftp Subscription 相关配置 #####
 zk.session.timeout=6000
 zk.address=172.18.18.163:2181
 zk.path.subscribe="/ftp_subscribe"
