--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <hbase.version>1.2.6</hbase.version>
         <log4j.version>1.2.17</log4j.version>
         <hadoop.version>2.7.2</hadoop.version>
-        <slf4j.version>1.6.6</slf4j.version>
+        <slf4j.version>1.7.16</slf4j.version>
         <es.version>5.5.0</es.version>
         <junit.version>4.12</junit.version>
         <kafka.version>1.0.0</kafka.version>
@@ -38,6 +38,7 @@
         <zkclient.version>0.10</zkclient.version>
         <scala.version>2.11.8</scala.version>
         <hive.version>2.3.0</hive.version>
+        <jni.version>1.0</jni.version>
     </properties>
 
 
