修改esClient获取方式

--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -63,5 +63,9 @@ job.clustering.capture.track=t_capture_track
 job.clustering.capture.database.url=jdbc:mysql://172.18.18.100:3306/resident?useUnicode=true&characterEncoding=UTF-8
 job.clustering.capture.database.user=root
 job.clustering.capture.database.password=Hzgc@123
+# es options
+es.cluster.name=hbase2es-cluster
+es.hosts=172.18.18.103
+es.cluster.port=9300
 
 
