--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -1,37 +1,61 @@
+########## kafka option ##########
 # kafka topic name
 kafka.topic.name=feature
 kafka.topic.faceobject=faceobject
 # kafka bootstraps
 kafka.metadata.broker.list=
-# FaceRecognizeAlarmJob groupID
-kafka.FaceRecognizeAlarmJob.group.id=FaceRecognizeAlarmJobGroup
-# FaceAddAlarmJob groupID
-kafka.FaceAddAlarmJob.group.id=FaceAddAlarmJobGroupID
-# FaceObjectConsumer groupID
-kafka.FaceObjectConsumer.group.id=FaceObjectConsumerID
+##################################
+
+########## rocketmq option ##########
 # RocketMQ topic name
 rocketmq.topic.name=REALTIME_PIC_MESSAGE
 # RocketMQ nameserver
 rocketmq.nameserver=
 # RocketMQ group id
 rocketmq.group.id=FaceGroup
+#####################################
+
+########## ftp option ##########
 # ftp account
 ftp.account=admin
 # ftp password
 ftp.password=123456
-# FaceAddAlarmJob options
+################################
+
+########## es option ###########
+# es options
+es.cluster.name=hbase2es-cluster
+es.hosts=172.18.18.103
+es.cluster.port=9300
+################################
+
+########## recognizeAlarmJob option ##########
+# group id
+kafka.FaceRecognizeAlarmJob.group.id=FaceRecognizeAlarmJobGroup
+# time interval
 job.recognizeAlarm.timeInterval=5
+# app name
 job.recognizeAlarm.appName=FaceRecognizeAlarmJob
-job.recognizeAlarm.master=yarn-cluster
+# item number
 job.recognizeAlarm.items.num=10
-# FaceAddAlarmJob options
+##############################################
+
+########## addAlarmJob option ##########
+# time interval
 job.addAlarm.timeInterval=5
+# app name
 job.addAlarm.appName=FaceAddAlarmJob
-job.addAlarm.master=yarn-cluster
-# OffLineAlarm options
-job.offLine.appName=FaceOffLineAlarmJob
-job.offLine.master=yarn-cluster
-# FaceobjectConsumer options
+# group id
+kafka.FaceAddAlarmJob.group.id=FaceAddAlarmJobGroupID
+########################################
+
+########## offline alarm ##########
+# app name
+job.offLine.appName=FaceOffLineAlarmJo
+###################################
+
+########## faceObjectConsumer option ##########
+# time interval
 job.faceObjectConsumer.timeInterval=15
 job.faceObjectConsumer.appName=FaceObjectConsumer
 job.faceObjectConsumer.broker.list=
@@ -40,32 +64,46 @@ job.faceObjectConsumer.topic.name=feature
 job.zkDirAndPort=
 job.kafkaToParquet.zkPaths=/parquet
 job.storeAddress=hdfs://hzgc/user/hive/warehouse/mid_table/
-# Clustering options
+###############################################
+
+########## clustering option ##########
+# app name
 job.clustering.appName=Resident-Clustering
+# partition number
 job.clustering.partition.number=20
+# cluster number
 job.clustering.cluster.number=
+# iterator number
 job.clustering.iterator.number=
+# mysql url
 job.clustering.mysql.url=jdbc:mysql://172.18.18.42:3306/isap?user=root&password=root
+# mysql table
 job.clustering.mysql.alarm.record.table=t_alarm_record
+# mysql table
 job.clustering.mysql.alarm.record.extra.table=t_alarm_record_extra
+# mysql field
 job.clustering.mysql.field.time=alarm_time
+# mysql field
 job.clustering.mysql.field.id=id
+# mysql field
 job.clustering.mysql.field.host=host_name
+# mysql field
 job.clustering.mysql.field.spic=small_picture_url
+# mysql field
 job.clustering.mysql.field.bpic=big_picture_url
-job.clustering.result.path=/opt/RealTimeFaceCompare/cluster/data
+# similarity threshold
 job.clustering.similarity.Threshold=0.85
+# appear count
 job.clustering.appear.count=1
+# center threshold
 job.clustering.similarity.center.Threshold=0.82
+# clustering month
 job.clustering.month=4
 job.clustering.capture.data=t_capture_data
 job.clustering.capture.track=t_capture_track
 job.clustering.capture.database.url=jdbc:mysql://172.18.18.100:3306/resident?useUnicode=true&characterEncoding=UTF-8
 job.clustering.capture.database.user=root
 job.clustering.capture.database.password=Hzgc@123
-# es options
-es.cluster.name=hbase2es-cluster
-es.hosts=172.18.18.103
-es.cluster.port=9300
+#######################################
 
 
