修改一键配置脚本

--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -68,6 +68,8 @@ Cluster_HostName=
 #---------------------------------------------------------------------#
 #                              其他配置                                #
 #---------------------------------------------------------------------#
+#需要搭建的服务：e.x:device;face;starepo
+spring_cloud_service_classes=
 
 #创建kafka topic时的副本数
 kafka_replicationFactor=3
